# AWS-Project

./: pyproject.toml
aws-project/: pyproject.toml
aws-project/aws_project/: csv_to_parquet.py  filetest.py  script.py
output_files/: MovieAndTv.json  MovieAndTv.parquet
